DTO json refactoring moving global data from specific detailed object to a more general object, optimizing the data dimension. Test erfactoring on freediver resource.

--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -9,18 +9,18 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
+    <title>App-nea platform</title>
   </head>
 
   <body>
-    <h1>Hello App Engine!</h1>
+    <h1>Welcome to App-nea platform!</h1>
 	
     <table>
       <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
+        <td colspan="2" style="font-weight:bold;">Available links</td>        
       </tr>
       <tr>
-        <td><a href="freediving_logbook">Freediving_logbook</a></td>
+        <td><a href="appnea_rest_api_v_1_0_0.html">App-nea rest API documentation</a></td>
       </tr>
     </table>
   </body>
