--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -20,7 +20,7 @@
         <td colspan="2" style="font-weight:bold;">Available links</td>        
       </tr>
       <tr>
-        <td><a href="appnea_rest_api_v_1_0_0.html">App-nea rest API documentation</a></td>
+        <td><a href="https://docs.google.com/document/d/1R5_QRElu40hTb6ErLYQW1fbh7MSRgfpP-Fmz8yEmnk8/pub">App-nea rest API documentation</a></td>
       </tr>
     </table>
   </body>
