working on client angular structure

--- a/Server-side/war/app/index.html
+++ b/Server-side/war/app/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="freedivingLogbookModule">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script src="angular/common/constant.js"></script>
+    <script src="angular/app.js"></script>
+    <script src="angular/common/constant.js"></script>
   </head>
   <body>
     <div>
