Completed http invocation test

--- a/Server-side/war/app/index.html
+++ b/Server-side/war/app/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html ng-app="freedivingLogbookModule">
+<html ng-app="appNeaClient">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script src="angular/common/constant.js"></script>
     <script src="angular/app.js"></script>
-    <script src="angular/common/constant.js"></script>
+    <script src="angular/service/freediver_service.js"></script>
   </head>
   <body>
     <div>
