--- a/Server-side/war/app/index.html
+++ b/Server-side/war/app/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html ng-app="appNeaClient">
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script src="assets/libs/angular/angular.min.js"></script>
     <script src="angular/common/constant.js"></script>
     <script src="angular/app.js"></script>
     <script src="angular/service/freediver_service.js"></script>
+    <script src="angular/controller/freediver_controller.js"></script>
+    <script src="assets/libs/angular-facebook/angular-facebook.js"></script>
   </head>
   <body>
-    <div>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
-      <h1>Hello, {{ yourName }}!</h1>
+    <div ng-controller="freediverController">
+      <button ng-click="login()">Login!</button>
     </div>
   </body>
 </html>
