--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -15,6 +15,7 @@
         <div>
             <input type="text" ng-model="externalToken"/>
             <input type="text" ng-model="freediver.externalUsername "/>
+            <input type="text" ng-model="freediver.status "/>
         </div>
     </div>
       
