Build.xml creation for test and production environment management

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -16,6 +16,8 @@
             <input type="text" ng-model="externalToken"/>
             <input type="text" ng-model="freediver.externalUsername "/>
             <input type="text" ng-model="freediver.status "/>
+            <input type="text" ng-model="freediver.weightUnit"/>
+            <input type="text" ng-model="freediver.diveSessions"/>
         </div>
     </div>
       
