--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -25,7 +25,7 @@
         <td><a href="https://docs.google.com/document/d/1R5_QRElu40hTb6ErLYQW1fbh7MSRgfpP-Fmz8yEmnk8/pub">App-nea rest API documentation</a></td>
       </tr>
       <tr>
-        <td><a href="https://app-nea-it.appspot.com/webclient/index.html">App-nea web client</a></td>
+        <td><a href="/webclient/index.html">App-nea web client</a></td>
       </tr>
     </table>
    
