--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    	
+    <body background="/webclient/assets/img/app-nea-def.png">	
 	
     <h1>Welcome to App-nea platform!</h1>
 	
