Showing divesessions iterating on login result

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -65,7 +65,8 @@
 
     <!-- Start View section --> 
         <div>
-            <div class="list-group">
+            <div ng-include="'src/view/divesession_view.html'"></div>
+            <!--div class="list-group">
                 <a href="#" class="list-group-item ">
                     <h4 class="list-group-item-heading">dive session 1</h4>
                     <p class="list-group-item-text">...</p>
@@ -82,7 +83,7 @@
                     <h4 class="list-group-item-heading">dive session 4</h4>
                     <p class="list-group-item-text">...</p>
                 </a>
-            </div>
+            </div-->
             
             <!--button ng-click="" ng-show="freediver!=null">
             Logout
