Material toolbar icon management

--- a/Server-side/war/webclient/index_material.html
+++ b/Server-side/war/webclient/index_material.html
@@ -1,10 +1,12 @@
 <html ng-app="appNeaClient">
     <head>
-    <meta name="viewport" content="initial-scale=1" />
+    <meta name="viewport" content="width=device-width" content="initial-scale=1" />
     <!-- Angular Material CSS now available via Google CDN; version 0.11.4 used here -->
     <!--link rel="stylesheet" href="assets/libs/angular-material/angular-material.min.css"-->
-      <link rel="stylesheet"  href="https://gitcdn.xyz/repo/angular/bower-material/v0.11.4/angular-material.css">
-
+    <link rel="stylesheet"  href="https://gitcdn.xyz/repo/angular/bower-material/v0.11.4/angular-material.css">
+    
+    <!-- material icon -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       
    <!-- Angular Material Dependencies -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.js"></script>
