--- a/Server-side/war/webclient/src/sidenav/sidenav_view.html
+++ b/Server-side/war/webclient/src/sidenav/sidenav_view.html
@@ -1,7 +1,7 @@
 <md-sidenav class="md-sidenav-left" md-component-id="left">
     <md-list>
         <md-list-item>
-            <p>User: {{freediver.externalUsername}}</p>
+            <p>User: {{freediver.username}}</p>
         </md-list-item>
         <md-list-item ng-show="fbStatus == 0">
             <md-button ng-click="logout()">Logout</md-button>
