--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -23,7 +23,59 @@
     <!--Insert a progress circular to show during ajax call-->
     <div ng-show="spinner" layout="row" layout-align="center center"><md-progress-circular md-mode="indeterminate"></md-progress-circular></div>
 
+    <!--**************************DIVE SESSION DETAIL SECTION*******************************-->
+    <!-- this content is used to show dive session detail both for edit and display mode -->
+    <md-content class="md-padding"> 
+        <!--Insert a progress circular to show during ajax call-->
+        <div ng-show="spinner" layout="row" layout-align="center center"><md-progress-circular md-mode="indeterminate">
+        </md-progress-circular></div>
+        <div  ng-show="!spinner">
+            <form name="divesessionForm"> 
+                <div layout="column"> 
+                    <div>
+                        <md-datepicker ng-model="divesession.date" md-placeholder="Date">
+                        </md-datepicker>
+                    </div>
+                    <md-input-container flex> 
+                        <label>Location</label> 
+                        <input ng-model="divesession.location"> 
+                    </md-input-container> 
+                    <md-input-container flex> 
+                        <label>Meteo</label> 
+                        <input ng-model="divesession.meteo"> 
+                    </md-input-container> 
+                    <md-input-container flex> 
+                        <label>Equipment</label> 
+                        <input ng-model="divesession.equipment"> 
+                    </md-input-container>
+                    <div layout="row">
+                        <md-input-container flex> 
+                            <label>Depth</label> 
+                            <input ng-model="divesession.depth"> 
+                        </md-input-container> 
+                        <md-input-container flex> 
+                            <label>Surf.temp</label> 
+                            <input ng-model="divesession.temp"> 
+                        </md-input-container> 
+                        <md-input-container flex> 
+                            <label>Weight</label> 
+                            <input ng-model="divesession.weight"> 
+                        </md-input-container> 
+                    </div>
+                    <md-input-container flex> 
+                            <label>Note</label> 
+                            <textarea ng-model="divesession.note" columns="1" md-maxlength="150"></textarea> 
+                    </md-input-container> 
+                  </div>
+            </form> 
+            <div class="md-actions" layout="row"> 
+                <span flex></span> 
+                <md-button ng-click="save()" class="md-primary">Save</md-button> 
+            </div>
+        </div>
+    </md-content> 
 
+    <!--************************DIVES LIST SECTION**********************************************-->
     <!-- content contains divesession list -->
     <md-content flex>
         <div><span>Show divesession detail</span></div>
