Save and update dive session implemented

--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -33,7 +33,7 @@
             <form name="divesessionForm"> 
                 <div layout="column"> 
                     <div>
-                        <md-datepicker ng-model="divesession.date" md-placeholder="Date">
+                        <md-datepicker ng-model="divesession.diveDate" md-placeholder="Date">
                         </md-datepicker>
                     </div>
                     <md-input-container flex> 
