added tabs on detail session view

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -4,6 +4,9 @@
         <!-- Angular Material CSS now available via Google CDN; version 0.11.4 used here -->
         <!--link rel="stylesheet" href="assets/libs/angular-material/angular-material.min.css"-->
         <link rel="stylesheet"  href="https://gitcdn.xyz/repo/angular/bower-material/v0.11.4/angular-material.css">
+        
+        <!-- custom css -->
+        <link rel="stylesheet" href="src/shared/custom.css">
 
         <!-- material icon -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
