--- a/Server-side/war/webclient/src/divesession/divesession_detail_dialog.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_dialog.html
@@ -12,7 +12,7 @@
                     </div>
                     <md-input-container flex> 
                         <label>Location</label> 
-                        <input ng-model="divesession.location"> 
+                        <input class="input-cust" ng-model="divesession.location"> 
                     </md-input-container> 
                     <md-input-container flex> 
                         <label>Meteo</label> 
