--- a/Server-side/war/webclient/src/divesession/divesession_list_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_list_view.html
@@ -26,7 +26,7 @@
 
     <!-- fab button for add new divesession -->
     <md-button class="md-fab md-fab-bottom-right" aria-label="Add"  ng-click="showDivesessionDetail()">
-        <md-icon icon="add" md-font-set="material-icons">add circle outline</md-icon>
+        <md-icon icon="add" md-font-set="material-icons">add</md-icon>
         
     </md-button>
 
