--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -30,6 +30,7 @@
         <script src="src/shared/model/model.js"></script>
         <script src="src/divesession/divesession_list_controller.js"></script>
         <script src="src/divesession/divesession_detail_controller.js"></script>
+        <script src="src/dive/dive_detail_controller.js"></script>
         <script src="src/sidenav/sidenav_controller.js"></script>
 
     </head>
