--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -48,7 +48,7 @@
         </md-fab-trigger>
         <md-fab-actions-->
             <md-button aria-label="add" class="md-fab md-fab-bottom-right" ng-show="(selectedIndex == 1) && (divesession.id != null)">
-                <md-icon icon="add" md-font-set="material-icons" ng-click="addFakeDive()">add</md-icon>
+                <md-icon icon="add" md-font-set="material-icons" ng-click="showDiveDetail(null)">add</md-icon>
             </md-button>
             <!--md-button aria-label="delete"  class="md-fab">
                <md-icon icon="add" md-font-set="material-icons">delete</md-icon>
@@ -122,27 +122,28 @@
         <!--************************DIVES LIST SECTION**********************************************-->
         <!-- content contains divesession list -->
     <md-tab label="Dives">
-      <!--md-content flex>
-            <md-list>
-                <md-list-item class="md-3-line" ng-repeat="dive in divesession.dives | orderBy : '-diveDate'">
-                    <img ng-src="assets/img/twitter_diver.png" class="md-avatar" alt="diver">
-                    <div layout="column" class="md-list-item-text">
-                        <div layout="row" layout-align="space-between end">
-                            <h4><b>{{dive.diveDate}}</b></h4>
-                        </div>
-                        <div layout="row" layout-align="space-between center"> 
-                            <p class="md-caption"> maxDepth: {{dive.maxDepth}}</p>
-                            <p>duration:{{dive.duration.getTemp(freediver.tempUnit)}}</p>
-                        </div> 
-                    <md-divider></md-divider>
-                </md-list-item>
-
-            </md-list>
-        </md-content-->
+    <md-content flex>
+        <md-list>
+            <md-list-item class="md-3-line" ng-repeat="dive in divesession.dives | orderBy : '-diveTime'" ng-click="showDiveDetail(dive)">
+                <img ng-src="assets/img/twitter_diver.png" class="md-avatar" alt="diver">
+                <div layout="column" class="md-list-item-text">
+                    <div layout="row" layout-align="space-between end">
+                        <h4><b>{{dive.diveTime}}</b></h4>
+                    </div>
+                    <div layout="row" layout-align="space-between center"> 
+                        <p class="md-caption"> maxDepth: {{dive.maxDepth}}</p>
+                        <p>duration:{{dive.duration}}</p>
+                    </div>
+                </div>
+                <md-divider></md-divider>
+            </md-list-item>
+        </md-list>
+    </md-content>
     </md-tab> 
         
         <!-- ************************STATISTICS ********************************** -->
-    <md-tab label="Statistics"></md-tab>
+    <md-tab label="Statistics">
+    </md-tab>
        
   </md-tabs>
 </md-content>
