--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -6,7 +6,7 @@
                     <md-icon flex md-font-set="material-icons">arrow_back</md-icon>
 
             </md-button>
-            <p>Dive session</p>
+            <p>Dive Session</p>
             <!--fill right space with a blank div -->
             <div ng-show="fbStatus == 0" style="height:48px; width:48px"></div>
             
@@ -25,7 +25,7 @@
     <!-- different fab speed dial depending on tab -->
 
     <!-- fab speed dial for tab DETAILS -->
-    <md-fab-speed-dial md-direction="up" class="md-fab-bottom-right md-fling" md-open="false" 
+    <md-fab-speed-dial md-direction="up" class="md-fab-bottom-right md-scale" md-open="false" 
                       ng-show="selectedIndex == 0">
         <md-fab-trigger>
             <md-button aria-label="menu...." class="md-fab"> <md-icon flex md-font-set="material-icons">reorder</md-icon></md-icon></md-button>
