--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -8,7 +8,15 @@
             </md-button>
             <p>Dive Session</p>
             <!--fill right space with a blank div -->
-            <div ng-show="fbStatus == 0" style="height:48px; width:48px"></div>
+            <div ng-show="(fbStatus == 0) && ( selectedIndex == 0) ">
+                <md-button aria-label="save" class="md-icon-button" ng-click="saveDivesession()" >
+                    <md-icon icon="add" md-font-set="material-icons">done</md-icon>
+                </md-button>
+                <md-button aria-label="delete"  class="md-icon-button">
+                   <md-icon icon="add" md-font-set="material-icons" ng-click="removeDivesession()">delete</md-icon>
+                </md-button>
+            </div>
+            <div ng-show="(fbStatus == 0) && (selectedIndex != 0)" style="height:48px; width:109.672px"></div>
             
         </div>
     </md-toolbar>
@@ -25,7 +33,7 @@
     <!-- different fab speed dial depending on tab -->
 
     <!-- fab speed dial for tab DETAILS -->
-    <md-fab-speed-dial md-direction="up" class="md-fab-bottom-right md-scale" md-open="false" 
+    <!--md-fab-speed-dial md-direction="up" class="md-fab-bottom-right md-scale" md-open="false" 
                       ng-show="selectedIndex == 0">
         <md-fab-trigger>
             <md-button aria-label="menu...." class="md-fab"> <md-icon flex md-font-set="material-icons">reorder</md-icon></md-icon></md-button>
@@ -38,7 +46,7 @@
                <md-icon icon="add" md-font-set="material-icons" ng-click="removeDivesession()">delete</md-icon>
             </md-button>
         </md-fab-actions>
-    </md-fab-speed-dial>
+    </md-fab-speed-dial-->
     
     <!-- fab speed dial for tab DIVES -->
     <!--md-fab-speed-dial md-direction="up" class="md-fab-bottom-right md-fling" md-open="false" 
