some comment added !

--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -7,7 +7,7 @@
 
             </md-button>
             <p>Dive Session</p>
-            <!--fill right space with a blank div -->
+            <!--different button depending on tab, tab 0 - DETAILS - has save and delete action. Other tabs has not action -->
             <div ng-show="(fbStatus == 0) && ( selectedIndex == 0) ">
                 <md-button aria-label="save" class="md-icon-button" ng-click="saveDivesession()" >
                     <md-icon icon="add" md-font-set="material-icons">done</md-icon>
