confirmation dialog added on remove function, toast message added on completed action execution

--- a/Server-side/war/webclient/src/dive/dive_detail_view.html
+++ b/Server-side/war/webclient/src/dive/dive_detail_view.html
@@ -12,7 +12,7 @@
                     <md-icon icon="done" md-font-set="material-icons">done</md-icon>
                 </md-button>
                 <md-button aria-label="delete"  class="md-icon-button">
-                   <md-icon icon="delete" md-font-set="material-icons" ng-click="removeDive()">delete</md-icon>
+                   <md-icon icon="delete" md-font-set="material-icons" ng-click="showRemoveConfirmation()">delete</md-icon>
                 </md-button>
             </div>
             
