--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -13,7 +13,7 @@
                     <md-icon icon="add" md-font-set="material-icons">done</md-icon>
                 </md-button>
                 <md-button aria-label="delete"  class="md-icon-button">
-                   <md-icon icon="add" md-font-set="material-icons" ng-click="removeDivesession()">delete</md-icon>
+                   <md-icon icon="add" md-font-set="material-icons" ng-click="showRemoveConfirmation()">delete</md-icon>
                 </md-button>
             </div>
             <div ng-show="(fbStatus == 0) && (selectedIndex != 0)" style="height:48px; width:109.672px"></div>
