--- a/Server-side/war/webclient/src/dive/dive_detail_view.html
+++ b/Server-side/war/webclient/src/dive/dive_detail_view.html
@@ -43,6 +43,29 @@
         <div ng-show="!spinner">
             <form name="diveForm" layout-margin> 
                 <div layout="column"> 
+                    <div>
+                        <fieldset>
+                            <legend>Time</legend>
+                            <div layout="row">
+                                <md-input-container style="margin-right: 10px;">
+                                    <label>HH</label>
+                                    <md-select ng-model="hh">
+                                    <md-option ng-repeat="hh in h24" value="{{hh}}">{{hh}}</md-option>
+                                    </md-select>
+                                </md-input-container>
+                                <md-input-container style="margin-right: 10px;">
+                                    <label>MM</label>
+                                    <md-select ng-model="mm">
+                                    <md-option ng-repeat="mm in m60" value="{{mm}}">{{mm}}</md-option>
+                                    </md-select>
+                                </md-input-container>
+
+                            </div>
+                        </fieldset>
+                        
+                    </div>
+                    <md-input-container><div moment-picker="myDate"> {{ myDate }} </div></md-input-container> 
+                    
                     <md-input-container > 
                         <label>Time</label> 
                         <input name="time" ng-model="dive.diveTime" required> 
