Patching moment date time picker for supporting default date

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -22,7 +22,7 @@
         
         <!-- Angular moment picker-->
         <script src="assets/libs/moment-picker/moment-with-locales.js"></script>
-        <script src="assets/libs/moment-picker/angular-moment-picker.min.js"></script>
+        <script src="assets/libs/moment-picker/angular-moment-picker_app-nea_patch.js"></script>
         <link href="assets/libs/moment-picker/angular-moment-picker.min.css" rel="stylesheet">
         
         <!-- app-nea source code reference -->    
