Completed draft version of client

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -37,6 +37,7 @@
         <script src="src/dive/dive_detail_controller.js"></script>
         <script src="src/sidenav/sidenav_controller.js"></script>
         <script src="src/shared/controller/root_controller.js"></script>
+        <script src="src/dialogalert/dialogalert_service.js"></script>
 
     </head>
 
