--- a/Server-side/war/webclient/src/dive/dive_detail_view.html
+++ b/Server-side/war/webclient/src/dive/dive_detail_view.html
@@ -8,10 +8,10 @@
             </md-button>
             <p>Dive</p>
             <div ng-show="fbStatus == 0">
-                <md-button aria-label="save" class="md-icon-button" ng-click="saveDive()" >
+                <md-button aria-label="save" ng-disabled="diveForm.$invalid" class="md-icon-button" ng-click="saveDive()" >
                     <md-icon icon="done" md-font-set="material-icons">done</md-icon>
                 </md-button>
-                <md-button aria-label="delete"  class="md-icon-button">
+                <md-button aria-label="delete"  ng-disabled="viewStatus == 0" class="md-icon-button">
                    <md-icon icon="delete" md-font-set="material-icons" ng-click="showRemoveConfirmation()">delete</md-icon>
                 </md-button>
             </div>
@@ -54,7 +54,7 @@
                    
                     <md-input-container>
                         <label>Dive Type</label>
-                        <md-select ng-model="dive.diveType">
+                        <md-select ng-model="dive.diveType" required>
                           <md-option ng-repeat="type in diveTypes" value="{{type}}">
                             {{type}}
                           </md-option>
