--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -8,6 +8,7 @@
 
 <html>
   <head>
+  	<meta name="viewport" content="width=device-width" content="initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>App-nea: freediver's logbook platform</title>
   </head>
