Statistic view completed

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -28,6 +28,7 @@
         <!-- app-nea source code reference -->    
         <script src="src/app.js"></script> 
         <script src="src/shared/constant.js"></script>
+        <script src="src/shared/helper.js"></script>
         <script src="src/shared/service/facebook_service.js"></script>
         <script src="src/shared/service/freediver_service.js"></script>
         <script src="src/shared/service/model_service.js"></script>
